Better plot popup menu

--- a/src/nccut/nccut.kv
+++ b/src/nccut/nccut.kv
@@ -403,7 +403,7 @@
                 multiline: False
                 size_hint: (0.75, 1)
                 hint_text: "Enter Image or NetCDF File Path"
-                on_text_validate: root.open_btn()
+                on_text_validate: root.load_btn()
 
             RoundedButton:
                 size_hint: (0.1, 1)
